# axum_rest_cli_client

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/examples/: get_todo_pagination.json  patch_todo.json  post_todo.json  put_todo.json
client/src/: cli.rs  main.rs
client/src/requests/: mod.rs  reqwest_readme.rs  spotify_example.rs  todos.rs
common/: Cargo.toml
common/src/: lib.rs
rust_client/: Cargo.toml
rust_client/src/: cli.rs  http_requests.rs  main.rs
rust_client/src/requests/: mod.rs  spotify_example.rs
server/: Cargo.toml  README.md
server/src/: main.rs
src/: main.rs
